--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1501,6 +1501,16 @@
             </div>
             </section>  
 
+ <section id="status" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - Status</h2></header>
+            <div class="modal-body">
+            
+ <a class="wb-lbx" href="images/status.JPG" title="Status">
+                        <img src="images/status.JPG" alt="Status" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+            </section>  
+
             <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
             <div class="modal-body">
