--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1164,7 +1164,7 @@
             </details>
 </li>
 	
-<h4>Other information</h4>		
+<h4>Codes - Other information</h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
