--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -549,7 +549,7 @@
             </details>
 		 </li>
 
-<li class="code-num mrgn-lft-md"> <details><summary><span class="label label-warning">Slips filed for calendar year 2023 and after</span> Box 45 – Employer-offered dental benefits (EODB) </summary>
+<li class="code-num mrgn-lft-md"> <details><summary>Box 45 – Employer-offered dental benefits (EODB) <span class="label label-warning">Slips filed for calendar year 2023 and after</span> </summary>
 <p id="bx_45">For T4 slips filed for calendar year 2023 and after, enter the appropriate code using box 45 if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to an employee from the following list to indicate the level of access to services you provided:</p>
 
     
@@ -762,7 +762,7 @@
             </details>
 </li>
 
-<li class="code-num mrgn-lft-md"><details><summary ><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions </summary>	
+<li class="code-num mrgn-lft-md"><details><summary >Box 16A – Employee's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p id="bx_16a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions you deducted from your employee in box 16A if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec.</p>
 
  <h4>Specific situations</h4>
@@ -824,7 +824,7 @@
             </details>  
     </li>
 
-<li class="code-num mrgn-lft-md"><details><summary><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions </summary>
+<li class="code-num mrgn-lft-md"><details><summary>Box 17A – Employee's second QPP (QPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>
 <p id="bx_17a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions you deducted from your employee in box 17A if you enter in <a href="#bx_10">box 10</a> that your employee worked in the province of Quebec.</p>
 
  <h4>Specific situations</h4>
