--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -989,49 +989,6 @@
 </li>
 
 
-<li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
-<p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
-
- <h4>Specific situation</h4>
-<dl class="dl-horizontal">
-<dt>Employee did not contribute</dt>
-<dd><strong>Do not</strong> report an amount if the employee <strong>did not</strong> contribute to a plan using box 20.</dd>
-
-<dt>Direct transfers</dt>
-<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
-
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
-<p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report the amount related to their taxable income using code box 20.</p>
-<p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
-</dd>
-
-<dt><abbr title="Registered retirement savings plan">RRSP</abbr> </dt>
-<dd><p><strong>Do not</strong> report an amount if you made contributions to your employee's <abbr title="Registered retirement savings plan">RRSP</abbr> using box 20, use <a href="#cd_40">code 40</a> to report the total value of the benefit.</p>
-</dd>
-
-<dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
-<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
-<p><strong>Do not</strong> report amounts that are not deductable.</p>
-
-<p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
-</dd>
-
-<dt><abbr title="Registered pension plan">RPP</abbr> past-services contributions </dt>
-<dd><p>Report the amount your employee contributed to a <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-services contributions for: </p>
-<ul>
-            <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
-            <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
-            </ul>
-
-</dd>
-</dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
-
-                                  
-                       </details>	    
-		    </li>
-
 
 <li class="code-num mrgn-lft-md">   <details> <summary >Box 24 – EI insurable earnings </summary>
                         <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's <abbr title="Employment insurance">EI</abbr> premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
@@ -1075,6 +1032,51 @@
 </dl>    
             </details>
 </li>
+
+<h4>Other income</h4>
+
+<li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
+<p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Employee did not contribute</dt>
+<dd><strong>Do not</strong> report an amount if the employee <strong>did not</strong> contribute to a plan using box 20.</dd>
+
+<dt>Direct transfers</dt>
+<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
+
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report the amount related to their taxable income using code box 20.</p>
+<p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
+</dd>
+
+<dt><abbr title="Registered retirement savings plan">RRSP</abbr> </dt>
+<dd><p><strong>Do not</strong> report an amount if you made contributions to your employee's <abbr title="Registered retirement savings plan">RRSP</abbr> using box 20, use <a href="#cd_40">code 40</a> to report the total value of the benefit.</p>
+</dd>
+
+<dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
+<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
+<p><strong>Do not</strong> report amounts that are not deductable.</p>
+
+<p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
+</dd>
+
+<dt><abbr title="Registered pension plan">RPP</abbr> past-services contributions </dt>
+<dd><p>Report the amount your employee contributed to a <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-services contributions for: </p>
+<ul>
+            <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
+            <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
+            </ul>
+
+</dd>
+</dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
+
+                                  
+                       </details>	    
+		    </li>
 
 <li class="code-num mrgn-lft-md"><details> <summary>Box 44 – Union dues </summary>
             <p id="bx_44"></p>
