--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1033,7 +1033,7 @@
             </details>
 </li>
 
-<h4>Other income</h4>
+<h4>Boxes - Other remuneration</h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
