--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -969,7 +969,7 @@
             </details>
 </li>
 
-<h4>EI</h4>
+<h4><abbr title="Employment insurance">EI</abbr></h4>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 18 – Employee's EI premiums </summary>
             <p id="bx_18">Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
