--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1068,10 +1068,10 @@
             </details>
 </li>
 
-<h4>Boxes - Other remuneration</h4>
+<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
-<p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
+<p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1113,6 +1113,31 @@
                        </details>	    
 		    </li>
 
+<li class="code-num mrgn-lft-md">  <details><summary>Box 50 – RPP or DPSP registration number </summary>
+         <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#bx_52">box 52</a>.</p> 
+
+<p>You have to report the plan number even if your plan requires only employer contributions. If you make contributions to union pension funds, enter the unio's plan number.</p>
+
+<p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
+            </details>
+           </li>
+
+<li class="code-num mrgn-lft-md"><details><summary>Box 52 – Pension adjustment <span class="label label-info">Jeremiah</span></summary>
+         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
+
+ <h4>Specific situations </h4>
+<dl class="dl-horizontal">
+
+<dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
+<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
+
+</dl>   
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/registered-plans-administrators/pspa/about-pension-adjustment.html">Pension Adjustment (PA)</a></p>   
+            </details>
+</li>
+
+<h4>Union dues or charitable donations</h4>
 <li class="code-num mrgn-lft-md"><details> <summary>Box 44 – Union dues </summary>
             <p id="bx_44"></p>
             <p>Report the amount you deducted from your employee for tax deductible union dues using box 44, only if you and the union agree that the union will not issue receipts for these dues. This includes amounts you paid to a parity or advisory committee that qualify for a deduction. </p>
@@ -1140,29 +1165,6 @@
             </details>
            </li>
 		
-<li class="code-num mrgn-lft-md">  <details><summary>Box 50 – RPP or DPSP registration number </summary>
-         <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#bx_52">box 52</a>.</p> 
-
-<p>You have to report the plan number even if your plan requires only employer contributions. If you make contributions to union pension funds, enter the unio's plan number.</p>
-
-<p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
-            </details>
-           </li>
-
-<li class="code-num mrgn-lft-md"><details><summary>Box 52 – Pension adjustment <span class="label label-info">Jeremiah</span></summary>
-         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
-
- <h4>Specific situations </h4>
-<dl class="dl-horizontal">
-
-<dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
-<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
-
-</dl>   
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/registered-plans-administrators/pspa/about-pension-adjustment.html">Pension Adjustment (PA)</a></p>   
-            </details>
-</li>
 
 	
 <h4>Codes - Other information</h4>		
