--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -578,7 +578,7 @@
 </details> 
           </li>
 
-   <h4>Income and deduction</h4>
+   <h4>Income and deduction <small><a href="#income" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
 	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
@@ -697,7 +697,7 @@
             </details>
 </li>
 
-<h4><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr></h4>
+<h4><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr> <small><a href="#cppqppppip" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
 		
 <li class="code-num mrgn-lft-md"><details><summary>Box 16 – Employee's CPP contributions </summary>
 	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -969,7 +969,7 @@
             </details>
 </li>
 
-<h4><abbr title="Employment insurance">EI</abbr></h4>
+<h4><abbr title="Employment insurance">EI</abbr> <small><a href="#ei" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 18 – Employee's EI premiums </summary>
             <p id="bx_18">Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
@@ -1068,7 +1068,7 @@
             </details>
 </li>
 
-<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
+<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> <small><a href="#rppdpsp" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
@@ -1167,7 +1167,7 @@
 		
 
 	
-<h4>Codes - Other information</h4>		
+<h4>Codes - Other information <small><a href="#codesother" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small></h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
