--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1499,8 +1499,7 @@
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Identification</h2></header>
             <div class="modal-body">
-            
- <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+             <a class="wb-lbx" href="images/ident.JPG" title="Identification">
                         <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
@@ -1509,12 +1508,57 @@
  <section id="status" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Status</h2></header>
             <div class="modal-body">
-            
- <a class="wb-lbx" href="images/status.JPG" title="Status">
+             <a class="wb-lbx" href="images/status.JPG" title="Status">
                         <img src="images/status.JPG" alt="Status" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
             </section>  
+
+ <section id="income" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - Income and deduction</h2></header>
+            <div class="modal-body">
+             <a class="wb-lbx" href="images/income.JPG" title="Income and deduction">
+                        <img src="images/income.JPG" alt="Income and deduction" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+             </div>
+            </section>  
+
+ <section id="cppqppppip" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - CPP, QPP and PPIP</h2></header>
+            <div class="modal-body">
+             <a class="wb-lbx" href="images/cppqppppip.JPG" title="CPP, QPP and PPIP">
+                        <img src="images/cppqppppip.JPG" alt="CPP, QPP and PPIP" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+             </div>
+            </section>  
+
+ <section id="ei" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - EI</h2></header>
+            <div class="modal-body">
+             <a class="wb-lbx" href="images/ei.JPG" title="EI">
+                        <img src="images/ei.JPG" alt="EI" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+             </div>
+            </section>  
+
+ <section id="rppdpsp" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - RPP or DPSP</h2></header>
+            <div class="modal-body">
+             <a class="wb-lbx" href="images/rppdpsp.JPG" title="RPP or DPSP">
+                        <img src="images/rppdpsp.JPG" alt="RPP or DPSP" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+             </div>
+            </section>  
+
+ <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
+            <div class="modal-body">
+             <a class="wb-lbx" href="images/codesother.JPG" title="Codes - Other information">
+                        <img src="images/codesother.JPG" alt="Codes - Other information" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+             </div>
+            </section>  
+
 
             <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
