--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1553,19 +1553,16 @@
  <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
             <div class="modal-body">
-           <div class="wb-tabs carousel-s2  show-thumbs">
+      <div class="wb-tabs carousel-s1">
 	<ul role="tablist">
-		<li class="active"><a href="#panel1"><img src="images/ident.JPG" alt="Tab 1: ..." /></a></li>
-		<li><a href="#panel2"><img src="images/status.JPG" alt="Tab 2: ..." /></a></li>
-		<li><a href="#panel3"><img src="images/income.JPG" alt="Tab 3: ..." /></a></li>
-		<li><a href="#panel4"><img src="images/cppqppppip.JPG" alt="Tab 4: ..." /></a></li>
-		<li><a href="#panel5"><img src="images/status.JPG" alt="Tab 5: ..." /></a></li>
+		<li class="active"><a href="#panel1">Tab 1</a></li>
+		<li><a href="#panel2">Tab 2</a></li>
 		...
 	</ul>
 	<div class="tabpanels">
 		<div role="tabpanel" id="panel1" class="in fade">
 			<figure>
-				<img src="mages/ident.JPG" alt="Identification" />
+				<img src="images/ident.JPG" alt="Panel 1" />
 				<figcaption>
 					<p>
 						Identification
@@ -1575,7 +1572,7 @@
 		</div>
 		<div role="tabpanel" id="panel2" class="out fade">
 			<figure>
-				<img src="images/status.JPG" alt="Status" />
+				<img src="status/ident.JPG" alt="Panel 2" />
 				<figcaption>
 					<p>
 						Status
@@ -1583,30 +1580,6 @@
 				</figcaption>
 			</figure>
 		</div>
-
-<div role="tabpanel" id="panel3" class="out fade">
-			<figure>
-				<img src="images/income.JPG" alt="Income" />
-				<figcaption>
-					<p>
-						Status
-					</p>
-				</figcaption>
-			</figure>
-		</div>
-
-<div role="tabpanel" id="panel4" class="out fade">
-			<figure>
-				<img src="images/cppqppppip.JPG" alt="CPP, QPP and PPIP" />
-				<figcaption>
-					<p>
-						CPP, QPP and PPIP
-					</p>
-				</figcaption>
-			</figure>
-		</div>
-
-
 		...
 	</div>
 </div>
