--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1553,7 +1553,7 @@
  <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
             <div class="modal-body">
-      <div class="wb-tabs carousel-s1">
+      <div class="wb-tabs  exclude-play ignore-session carousel-s1">
 	<ul role="tablist">
 		<li class="active"><a href="#panel1">Tab 1</a></li>
 		<li><a href="#panel2">Tab 2</a></li>
@@ -1572,12 +1572,13 @@
 		</div>
 		<div role="tabpanel" id="panel2" class="out fade">
 			<figure>
-				<img src="status/ident.JPG" alt="Panel 2" />
-				<figcaption>
+<figcaption>
 					<p>
 						Status
 					</p>
 				</figcaption>
+				<img src="status/status.JPG" alt="Panel 2" />
+				
 			</figure>
 		</div>
 		...
