--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1577,7 +1577,7 @@
 						Status
 					</p>
 				</figcaption>
-				<img src="status/status.JPG" alt="Panel 2" />
+				<img src="image/status.JPG" alt="Panel 2" />
 				
 			</figure>
 		</div>
