--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1572,13 +1572,13 @@
 		</div>
 		<div role="tabpanel" id="panel2" class="out fade">
 			<figure>
+
+				<img src="image/status.JPG" alt="Panel 2" />
 <figcaption>
 					<p>
-						Status
+						View sample - Status
 					</p>
-				</figcaption>
-				<img src="image/status.JPG" alt="Panel 2" />
-				
+				</figcaption>				
 			</figure>
 		</div>
 		...
