--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1557,7 +1557,7 @@
 	<ul role="tablist">
 		<li class="active"><a href="#panel1">Tab 1</a></li>
 		<li><a href="#panel2">Tab 2</a></li>
-		...
+		
 	</ul>
 	<div class="tabpanels">
 		<div role="tabpanel" id="panel1" class="in fade">
@@ -1574,14 +1574,14 @@
 			<figure>
 
 				<img src="image/status.JPG" alt="Panel 2" />
-<figcaption>
+		<figcaption>
 					<p>
-						View sample - Status
+						Status
 					</p>
 				</figcaption>				
 			</figure>
 		</div>
-		...
+		
 	</div>
 </div>
              </div>
