--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1570,7 +1570,7 @@
 				</figcaption>
 			</figure>
 		</div>
-		<div role="tabpanel" id="panel2" class="in fade">
+		<div role="tabpanel" id="panel2" class="out fade">
 			<figure>
 
 				<img src="image/status.JPG" alt="Panel 2" />
