--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1553,37 +1553,73 @@
  <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
             <div class="modal-body">
-      <div class="wb-tabs  exclude-play ignore-session update-hash carousel-s2">
-	<ul role="tablist">
-		<li class="active"><a href="#panel1">Tab 1</a></li>
-		<li><a href="#panel2">Tab 2</a></li>
-		
-	</ul>
-	<div class="tabpanels">
-		<div role="tabpanel" id="panel1" class="in fade">
-			<figure>
-				<img src="images/ident.JPG" alt="Panel 1" />
-				<figcaption>
-					<p>
-						Identification
-					</p>
-				</figcaption>
-			</figure>
-		</div>
-		<div role="tabpanel" id="panel2" class="out fade">
-			<figure>
 
-				<img src="image/status.JPG" alt="Panel 2" />
-		<figcaption>
-					<p>
-						Status
-					</p>
-				</figcaption>				
-			</figure>
-		</div>
+<div class="wb-tabs ignore-session">
+	<div class="tabpanels">
+		<details id="details-panel1">
+			<summary>Code 11</summary>
+		<p>Just testing</p>
+			<p>
+				   <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+			</p>
+		</details>
+		<details id="details-panel2">
+			<summary> Code 12</summary>
+			<p>
+				...
+			</p>
+		</details>
+<details id="details-panel3">
+			<summary> Code 13</summary>
+			<p>
+				...
+			</p>
+		</details>
+<details id="details-panel4">
+			<summary> Code 14</summary>
+			<p>
+				...
+			</p>
+		</details>
+<details id="details-panel5">
+			<summary> Code 15</summary>
+			<p>
+				...
+			</p>
+		</details>
+
+<details id="details-panel6">
+			<summary> Code 16</summary>
+			<p>
+				...
+			</p>
+		</details>
+<details id="details-panel7">
+			<summary> Code 17</summary>
+			<p>
+				...
+			</p>
+		</details>
+<details id="details-panel8">
+			<summary> Indian - Employees</summary>
+			<p>
+				...
+			</p>
+		</details>
+
+<details id="details-panel9">
+			<summary> Indian - Self-employed</summary>
+			<p>
+				...
+			</p>
+		</details>
 		
 	</div>
 </div>
+
+      
              </div>
             </section>  
 
