--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1496,7 +1496,7 @@
 			</ul>
             </section>
 
- <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - Identification</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/ident.JPG" title="Identification">
@@ -1505,7 +1505,7 @@
             </div>
             </section>  
 
- <section id="status" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="status" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - Status</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/status.JPG" title="Status">
@@ -1514,7 +1514,7 @@
             </div>
             </section>  
 
- <section id="income" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="income" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - Income and deduction</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/income.JPG" title="Income and deduction">
@@ -1523,7 +1523,7 @@
              </div>
             </section>  
 
- <section id="cppqppppip" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="cppqppppip" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - CPP, QPP and PPIP</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/cppqppppip.JPG" title="CPP, QPP and PPIP">
@@ -1532,7 +1532,7 @@
              </div>
             </section>  
 
- <section id="ei" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="ei" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - EI</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/ei.JPG" title="EI">
@@ -1541,7 +1541,7 @@
              </div>
             </section>  
 
- <section id="rppdpsp" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="rppdpsp" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - RPP or DPSP</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/rppdpsp.JPG" title="RPP or DPSP">
@@ -1550,7 +1550,7 @@
              </div>
             </section>  
 
- <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def">
+ <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
             <div class="modal-body">
 
