--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -607,7 +607,7 @@
 <dd>Report payments you made out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) and amounts that a trustee allocated under an employee trust using box 14.</dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><strong>Do not</strong> report tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using box 014, use <a href="#cd_71">code 71</a> or for a self-employed worker use <a href="#cd_88">code 88</a>.
+<dd><strong>Do not</strong> report tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using box 14, use <a href="#cd_71">code 71</a> or for a self-employed worker use <a href="#cd_88">code 88</a>.
 </dd>
 
 <dt>Box 29 - Employment codes</dt>
@@ -1343,7 +1343,7 @@
             </details> 
 			</li>
 
-<li class="code-num mrgn-lft-md"><details><summary>Code 71 – Indian (tax-exempt income) – Employment </summary>
+<li class="code-num mrgn-lft-md"><details><summary>Code 71 – Indian (tax-exempt income) – Employment <span class="wb-inv">Keywords: Indians indigenous first nations</span></summary>
        <p id="cd_71">Report <strong>only</strong> tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
   
