--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1496,11 +1496,12 @@
 			</ul>
             </section>
 
+  
  <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
             <header class="modal-header"><h2 class="modal-title">View sample - Identification</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        <img src="images/ident.JPG" alt="Identification"/>
                         </a>
             </div>
             </section>  
