--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -291,8 +291,8 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Identification&nbsp;&nbsp; <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
- 
+   <h4>Identification&nbsp;&nbsp; <small><a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
+
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
@@ -1496,12 +1496,14 @@
 			</ul>
             </section>
 
-  
- <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - Identification</h2></header>
+<section id="ident" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
+               <header class="modal-header">
+                  <h2 class="modal-title">View sample - Identification</h2>
+               </header>
+ 
             <div class="modal-body">
              <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification"/>
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
             </section>  
