--- a/payroll/calculate/benefit/gifts.html
+++ b/payroll/calculate/benefit/gifts.html
@@ -482,10 +482,11 @@
 <h4 id="manu3">Gifts and awards provided by a person other than the employer (for example, gift bag provided at a trade show)</h4>
 <p>If the gifts and awards are provided by a person other than the employer the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-or ">
   <li class="cnjnctn-col">Recipients attend a trade show, convention, awards show, or similar event specific to their trade </li>
 <li class="cnjnctn-col">They receive gifts, gift bags or other promotional items at the event </li>
 <li class="cnjnctn-col">The person giving them the gift is not their employer </li>
+<li class="cnjnctn-col">The fair market value is <strong>$500 or less</strong>  </li>
 </ul>
 <h5>Payer reports the benefit on a slip</h5>
 <p>If the total value of all remuneration (gifts, awards and other payments) provided by the payer is <strong>more than $500</strong> (under the CRA administrative policy for issuing T4A slips), the <strong>payer has to report</strong> the value of the benefit on a T4A slip at the end of the year as follows:</p>
