--- a/payroll/calculate/benefit/gifts.html
+++ b/payroll/calculate/benefit/gifts.html
@@ -1069,7 +1069,39 @@
   <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>
 
 <h2 id="h_4">Report the benefit on a slip</h2>
-<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/report.txt"></div>	
+<p><strong>If the benefit is taxable, </strong>you must report the following on the slip.</p>
+<ul class="list-unstyled cnjnctn-type-or ">
+  <li class="cnjnctn-col">
+    <h3 class="mrgn-tp-sm text-muted h4">T4 slip - Non-cash and near-cash <span class="wb-inv">: Option 1</span></h3>
+	<p>Report on: </p>
+        <ul class="fa-ul">
+                       <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
+                      
+                         <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings</li>
+                        <li><span class="fas fa-check fa-li text-success"></span>Code 40 - Other Information</li>
+                     </ul>
+  </li>
+  <li class="cnjnctn-col">
+    <h3 class="mrgn-tp-sm text-muted h4">T4 slip - Cash <span class="wb-inv">: Option 2</span></h3>
+    <p>Report on: </p> <ul class="fa-ul">
+                       <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings</li>
+                        <li><span class="fas fa-check fa-li text-success"></span>Code 40 - Other Information</li>
+                     </ul>
+  </li>
+
+ <li class="cnjnctn-col">
+    <h3 class="mrgn-tp-sm text-muted h4">T4A slip <span class="wb-inv">: Option 3</span></h3>
+    <p>Report on: </p> <ul class="fa-ul">
+			<li><span class="fas fa-check fa-li text-success"></span>Code 28 - Other Income in Other Information for gifts and awards provided by a person other than the employer</li>
+                          <li><span class="fas fa-check fa-li text-success"></span>Code 154  - Cash award or prize from payer in Other Information for cash award or prize from a manufacturer provided directly to an employee of the dealer</li>
+                     </ul>
+  </li>
+
+</ul> 
+	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
+	
 		 
 		 
 <h2 id="h_5">References</h2>
