--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -338,7 +338,7 @@
 		</details>
 		</li>
 		
-   <h4>Status&nbsp;&nbsp; <small><a href="#status" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
+   <h4>Status&nbsp;&nbsp; <small><a href="#status" aria-controls="right-panel" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View sample</a></small> </h4>
 
 <li class="code-num mrgn-lft-md"><details> <summary>Box 10 – Province of employment </summary>
             <p  id="bx_10">Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
@@ -1508,7 +1508,7 @@
             </div>
             </section>  
 
- <section id="status" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
+ <section id="status" class="wb-overlay modal-content overlay-def wb-panel-r">
             <header class="modal-header"><h2 class="modal-title">View sample - Status</h2></header>
             <div class="modal-body">
              <a class="wb-lbx" href="images/status.JPG" title="Status">
