--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1244,14 +1244,14 @@
 </li>
 
 
-<li class="code-num mrgn-lft-md"><details> <summary>Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num mrgn-lft-md"><details> <summary>Code 38 – Security options benefits </summary> 
 <p id="cd_38">Report the total value of the security options taxable benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
- <h4>Specific situations</h4>
+ <h4>Option benefit deductions</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
-<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01), also report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d), report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
 <dt> Security options deduction under 110(1)(d.1)</dt>
-<dd>If your employee is eligible for the option benefit deduction under 110(1)(d.1), also report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d.1), report 50% of the value of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
 <dt> Employer makes election under 110(1.1)</dt>
 <dd>If your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to  not claim the cash-out as an expense, also report the value of the taxable benefit using <a href="#cd_86">code 86</a></dd>
 </dl>   
